--- a/main.css
+++ b/main.css
@@ -25,6 +25,18 @@ html, body {
   border-bottom: 1px solid #bbb;
 }
 
+
+#graphCanvas {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 150px; /* adjust height as needed */
+  pointer-events: none;
+  z-index: 100;
+}
+
+
 .celebration-image {
   display: none;
   position: absolute;
